--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -2,6 +2,20 @@
 
 <h1>Dette er taxonomy.html</h1>
 <h1>{{ .Title }}</h1>
+
+  {{/*  {{ range .Site.Data.pocketdata }}  */}}
+  {{ range where .Site.Data.pocketdata "tag" $.Title }}
+    <a>{{ .count  }}</a>
+    {{ range .items }}
+      <a href="{{ .given_url }}">{{ .given_title }} --   {{ .time_updated }}</a><br>
+  
+    {{ end  }}
+  {{ end  }} 
+
+
+{{/* {{ range $.Site.Data.pocket-data.bass }} */}}
+
+
 {{ range .Pages.ByPublishDate.Reverse }}
 <p>
   <a class="has-text-danger" href="{{ .RelPermalink }}">{{ .Title }}</a>
