--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -12,7 +12,7 @@
   <a>{{ .count }}</a>
 <div class="columns is-multiline is-mobile">
   {{ range .items }}
-  <div class="column is-3-tablet is-6-mobile is-2-desktop">
+  <div class="column is-3-tablet is-6-mobile is-2-widescreen">
   {{/*  <div class="column is-one-fifth-desktop">  */}}
     <a href="{{ .given_url }}">{{ .given_title }} -- {{ .time_updated }}</a><br />
   </div>
