--- a/layouts/_default/baseof2.html
+++ b/layouts/_default/baseof2.html
@@ -10,27 +10,12 @@
     {{ end }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
      
+      <!-- https://stackoverflow.com/questions/43564132/how-to-set-column-height-equal-to-longest-column-in-bulma-flexbox -->
     <style>
-.card-equal-height {
-   display: flex;
-   flex-direction: column;
-   height: 100%;
-}
-.card-equal-height .card-footer {
-  margin-top: auto;
-}
-.card{
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	border-radius: 0.5rem;
-}
-.card img{
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 30px 0 rgba(0, 0, 0, 0.19);
-	border-radius: 0.5rem;
-	max-width: 96.5%;
-	max-height: 96.5%;
-	margin: 0 auto;
-	margin-top: -3.5%;
-}
+      .my-column {
+        display: flex;
+      }
+      .my-down { margin-top: auto; } /* Push following elements to the bottom */
     </style>
 
 {{/* {{ $css := "./node_modules/bulma/css/bulma.min.css" | absURL }}
