--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,30 +1,38 @@
+{{/* https://codepen.io/smarius01/pen/Yvqzbq?editors=1000 */}}
 {{ define "main" }}
 
 <h1>Dette er taxonomy.html</h1>
 <h1>{{ .Title }}</h1>
 
-
-
-
 <div class="container is-fullhd">
-
-{{ range where .Site.Data.pocketdata "tag" $.Title }}
+  {{ range where .Site.Data.pocketdata "tag" $.Title }}
   <a>{{ .count }}</a>
-<div class="columns is-multiline is-mobile">
-  {{ range .items }}
-  <div class="column is-3-tablet is-6-mobile is-2-widescreen">
-  {{/*  <div class="column is-one-fifth-desktop">  */}}
-    <a href="{{ .given_url }}">{{ .given_title }} -- {{ .time_updated }}</a><br />
+  <div class="columns is-multiline is-mobile">
+    {{ range .items }}
+
+    <div class="column my-column is-3-tablet is-6-mobile is-2-widescreen">
+          <div class="card card-equal-height">
+            <div class="card-content">
+            <div class="has-background-primary">
+              <a class="has-text-centered" href="{{ .given_url }}">{{ .given_title }}</a>
+              </div>
+              <div class="content">
+                <p>{{ .excerpt | truncate 200 }}</p>
+              </div>
+            </div>
+            <div class="card-footer">
+              <p class="card-footer-item">
+                <span>Share on <a href="#"> Facebook</a></span>
+              </p>
+              <p class="card-footer-item">
+                <span>View on <a href="#"> Twitter</a></span>
+              </p>
+            </div>
+          </div>
+    </div>
+    {{ end }}
   </div>
-  {{ end }} 
+  {{/* {{ range .Site.Data.pocketdata }} */}} {{ end }}
 </div>
-{{/* {{ range .Site.Data.pocketdata }} */}} 
-
-{{ end }}
-</div>
-
-
-
-
 
 {{ end }}
