--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,6 +1,8 @@
 {{/* https://codepen.io/smarius01/pen/Yvqzbq?editors=1000 */}}
 {{ define "main" }}
 
+{{ $tcolor := partial "getTagColor.html" .Title }}
+<div class="has-background-{{ $tcolor }}">
 <h1>Dette er taxonomy.html</h1>
 <h1>{{ .Title }}</h1>
 <p>Hello world = {{ "Hello world" | base64Encode }}</p>
@@ -48,4 +50,5 @@
   {{/* {{ range .Site.Data.pocketdata }} */}} {{ end }}
 </div>
 
+</div>
 {{ end }}
