--- a/layouts/partials/getTagColor.html
+++ b/layouts/partials/getTagColor.html
@@ -2,6 +2,6 @@
 
 
 {{ $tagColor := replaceRE "[^0-9]?" "" (. | sha1) }}
-{{ $tagColor = index site.Params.back_colors (int (substr $tagColor 1 1)) }}
+{{ $tagColor = index site.Params.colors (int (substr $tagColor 1 1)) }}
 {{ return $tagColor }}
 
