--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ block "title" . }}
-      <!-- Blocks may include default content. -->
-      {{ .Site.Title }}
+      {{- if .IsHome -}}
+        {{ .Site.Title }}
+    {{ else }}
+       
+        {{ .Title }} - {{ .Site.Title }}
+        {{/* {{ .Site.Title }} */}}
+    {{ end }}
     {{ end }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
      
